--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,16 @@
 .poster img{
       width: 100%;
 }
+
+h5{
+      color: white;
+      padding: 12px 0;
+
+
+}
+
+h6{
+      color: gray;
+      
+
+}
