--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
       background-color:#1e2d3b ;
 }
 
+header{
+      background-color: #1e2d3b;
+      margin-bottom: 12px;
+}
+
 
 .album-container{
       text-align: center;
